# rc_project

./: README.md  READ_ME.md  nota_RC
arena/aap_frontiers/: CMakeLists.txt
arena/aap_frontiers/include/: aap_frontiers.cpp  aap_frontiers.h
arena/aap_map_merger/: CMakeLists.txt
arena/aap_map_merger/include/: aap_map_merger.cpp  aap_map_merger.h
arena/aap_mapping/: CMakeLists.txt
arena/aap_mapping/include/: aap_mapping.cpp  aap_mapping.h
arena/algorithms/coopexp/: CMakeLists.txt
arena/algorithms/coopexp/include/: coopexp.cpp  coopexp.h
arena/simulator/: CMakeLists.txt
arena/simulator/launch/: amcl.launch  move_base.launch  multirobot.launch  rviz.launch  stage.launch
arena/simulator/map/: grid_2_robots.world  grid_4_robots.world
arena/simulator/move_base/: base_local_planner_params.yaml  base_local_planner_params_slow.yaml  costmap_common_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml  move_base_params.yaml
arena/simulator/results/: results.txt
arena/simulator/rviz/: gui_combined.rviz
explore_lite/launch/: explore_lite.launch
explore_lite_multi/: CMakeLists.txt  package.xml
explore_lite_multi/launch/: explore_costmap.launch
p3dx_control/config/: control.yaml
p3dx_description/launch/: p3dx_description.launch
p3dx_description/urdf/: pioneer3dx.gazebo  pioneer3dx.sdf  pioneer3dx.urdf
pioneer_description/launch/: pioneer_description.launch
pioneer_description/urdf/: pioneer.gazebo  pioneer3dx.xacro  pioneer3dx.xml  pioneer3dx_fixed_joints.xml
rc_explorer/: CMakeLists.txt  package.xml
rc_explorer/launch/: explore.launch  explore_1robot_stage.launch  explore_3robot_coord_stage.launch  explore_3robot_stage.launch  explore_gazebo_sim.launch  explore_real.launch  explore_stage_sim.launch  gazebo.launch  gazebo_sim.launch  gmapping.launch  move_base.launch  move_base_3robots.launch  rviz.launch  stage.launch  stage_sim.launch
rc_explorer/maps/: 1pioneer_building.world  3pioneer_building.world  building.inc
rc_explorer/param/: base_local_planner_params.yaml  costmap_common_params_pioneer3dx.yaml  dwa_local_planner_params.yaml  gazebo_costmap_common_params_pioneer3dx.yaml  gazebo_global_planner_params.yaml  gazebo_local_planner_params.yaml  gazebo_move_base_params.yaml  global_costmap_params.yaml  global_planner_params.yaml  local_planner_params.yaml  move_base_params.yaml  real_costmap_common_params_pioneer3dx.yaml  real_global_costmap_params_pioneer3dx.yaml  real_global_planner_params.yaml  real_local_costmap_params_pioneer3dx.yaml  real_local_planner_params.yaml  real_move_base_params.yaml  stage_costmap_common_params_pioneer3dx.yaml  stage_local_costmap_params_pioneer3dx.yaml  stage_local_planner_params.yaml
rc_explorer/rviz_configs/: gazebo_1robot_sim.rviz  main_config.rviz  real_1robot.rviz  stage_1robot_sim.rviz  stage_3robot_sim.rviz
rc_explorer/src/: scan_filter_node.cpp
stage_ros/src/: stageros.cpp
